--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	},
 	"devDependencies": {
 		"@tailwindcss/vite": "^4.1.11",
+		"@types/node": "^24.2.1",
 		"@types/react": "^19.1.9",
 		"@types/react-dom": "^19.1.7",
 		"@vitejs/plugin-react": "^4.7.0",
