--- a/biome.json
+++ b/biome.json
@@ -1,10 +1,7 @@
 {
 	"linter": {
 		"rules": {
-			"recommended": true,
-			"suspicious": {
-				"noConsole": "warn"
-			}
+			"recommended": true
 		}
 	},
 	"javascript": {
