--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
 		"axios": "^1.11.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"consola": "^3.4.2",
 		"framer-motion": "^12.23.12",
 		"lucide-react": "^0.539.0",
 		"popmotion": "^11.0.5",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1",
-		"react-hook-form": "^7.62.0",
 		"react-toastify": "^11.0.5",
 		"tailwind-merge": "^3.3.1",
 		"zod": "^4.0.17",
