--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
-		"build": "tsc -b && vite build"
+		"prod": "tsc -b && vite build",
+		"preview": "vite preview --port 4000"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^5.2.1",
